[package]
name = "rat"
version = "1.0.0"
license = "GPL v3.0"
homepage = "https://github.com/MeztliRA/rat"
readme = "https://github.com/MeztliRA/rat/blob/main/README.md"
description = "A cat clone."
authors = ["MeztliRA <MeztliRA@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
anyhow = "1.0"